# picokeys-v2

./: .gitignore  Cargo.toml  README.md  RUST_REWRITE_RESEARCH.md  SECURITY.md  plan.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING.md  CLI_USAGE.md  CONTRIBUTING.md  HARDWARE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ccid_apdu.rs  fuzz_credential_decode.rs  fuzz_ctap_cbor.rs  fuzz_hid_framing.rs
pico-rs-fido/: Cargo.toml  build.rs  memory-esp32s3.x  memory-rp2040.x  memory-rp2350.x  memory-samd21.x
pico-rs-fido/src/: lib.rs
pico-rs-fido/src/credential/: backup.rs  id.rs  kek.rs  mod.rs
pico-rs-fido/src/extensions/: cred_blob.rs  cred_protect.rs  hmac_secret.rs  large_blob_key.rs  min_pin_length.rs  mod.rs
pico-rs-fido/src/fido/: cbor.rs  client_pin.rs  config.rs  credential_mgmt.rs  ctap.rs  get_assertion.rs  get_info.rs  large_blobs.rs  make_credential.rs  mod.rs  reset.rs  selection.rs  vendor.rs
pico-rs-fido/src/management/: mod.rs
pico-rs-fido/src/oath/: hotp.rs  mod.rs  totp.rs  yubikey_otp.rs
pico-rs-fido/src/u2f/: authenticate.rs  mod.rs  register.rs
pico-rs-hsm/: Cargo.toml
pico-rs-hsm/src/: lib.rs
pico-rs-hsm/src/hsm/: aes_ops.rs  apdu_router.rs  certificates.rs  decrypt.rs  derive.rs  dkek.rs  ecdh.rs  key_management.rs  mod.rs  pin.rs  pkcs15.rs  sign.rs
pico-rs-sdk/: Cargo.toml  build.rs
pico-rs-sdk/src/: lib.rs
pico-rs-sdk/src/apdu/: chaining.rs  command.rs  mod.rs  response.rs
pico-rs-sdk/src/button/: mod.rs
pico-rs-sdk/src/crypto/: aes.rs  asn1.rs  ecc.rs  mod.rs  rng.rs  rsa.rs  rsa_ops.rs  symmetric.rs
pico-rs-sdk/src/eac/: chip_auth.rs  mod.rs  secure_channel.rs
pico-rs-sdk/src/led/: mod.rs  patterns.rs
pico-rs-sdk/src/platform/: esp32c5.rs  esp32c6.rs  esp32s3.rs  mod.rs  rp2040.rs  rp2350.rs  samd21.rs
pico-rs-sdk/src/rescue/: mod.rs
pico-rs-sdk/src/store/: file.rs  flash.rs  mod.rs  otp.rs
pico-rs-sdk/src/transport/: mod.rs
pico-rs-sdk/src/transport/ccid/: class.rs  mod.rs
pico-rs-sdk/src/transport/hid/: class.rs  mod.rs
picokeys-cli/: Cargo.toml
picokeys-cli/src/: main.rs
picokeys-cli/src/commands/: config.rs  fido.rs  firmware.rs  hsm.rs  info.rs  mod.rs  oath.rs  otp.rs
picokeys-cli/src/device/: mod.rs
picokeys-cli/src/transport/: ccid.rs  hid.rs  mod.rs
scripts/: build.sh  clean.sh  flash.sh  generate-docs.sh  install-deps.sh  lint.sh  setup-rust-proxy.sh  test.sh  uninstall-deps.sh  vendor.sh
tests/fido2/: test_ctap2.rs  test_oath.rs  test_u2f.rs
tests/hsm/: test_hsm.rs
