[workspace]
members = [
    "pico-rs-sdk",
    "pico-rs-fido",
    "pico-rs-hsm",
    "picokeys-cli",
    "fuzz"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pico-keys/picokeys-v2"

# ── Workspace-wide dependency pins ───────────────────────────────────────────
# All shared deps declared here with default-features=false.
# Cargo's feature resolver is additive: if *any* crate in the tree activates
# "std" on a shared dep, every other crate gets it too.  Declaring deps here
# is the ONLY reliable way to strip std from transitive dependencies.
#
# TRANSITIVE CRATES THAT NEED EXPLICIT PINS (all have `default = ["std"]`):
#   crypto-common  pulled by sha2/sha1/hmac/aes/aes-gcm/…
#   digest         pulled by sha2/sha1/hmac/…
#   block-buffer   pulled by digest
#   cipher         pulled by aes/aes-gcm/cbc/chacha20poly1305
#   inout          pulled by cipher
#   aead           pulled by aes-gcm/chacha20poly1305
#   universal-hash pulled by ghash/polyval → aes-gcm
#   ghash          pulled by aes-gcm
#   polyval        pulled by ghash → aes-gcm
#   typenum        pulled by generic-array/crypto-bigint
#   generic-array  pulled by crypto-bigint/digest/…
#
# NOTE: getrandom is intentionally NOT listed here.
#   The platform RNG drivers (TrngRng, RoscHwRng, Esp32*Rng, Samd21Rng) are
#   standalone RngCore implementations that never call getrandom.
#   Adding getrandom as a direct dep on embedded targets pulls in libc/std.
#   getrandom is only needed by picokeys-cli (host binary) and stays there.
[workspace.dependencies]

# ── Transitive RustCrypto primitives (must pin to strip std defaults) ─────────
crypto-common  = { version = "0.1",  default-features = false }
digest         = { version = "0.10", default-features = false }
block-buffer   = { version = "0.10", default-features = false }
cipher         = { version = "0.4",  default-features = false }
inout          = { version = "0.1",  default-features = false }
aead           = { version = "0.5",  default-features = false }
universal-hash = { version = "0.5",  default-features = false }
ghash          = { version = "0.5",  default-features = false }
polyval        = { version = "0.6",  default-features = false }
typenum        = { version = "1",    default-features = false }
generic-array  = { version = "0.14", default-features = false }

# ── thiserror: v2 supports no_std; v1 requires std::error::Error ─────────────
thiserror = { version = "2.0", default-features = false }

# ── Hash / MAC ────────────────────────────────────────────────────────────────
sha1   = { version = "0.10", default-features = false }
sha2   = { version = "0.10", default-features = false }
sha3   = { version = "0.10", default-features = false }
hmac   = { version = "0.12", default-features = false }
hkdf   = { version = "0.12", default-features = false }
cmac   = { version = "0.7",  default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# ── Symmetric cipher ─────────────────────────────────────────────────────────
aes              = { version = "0.8",  default-features = false }
aes-gcm          = { version = "0.10", default-features = false, features = ["aes"] }
chacha20poly1305 = { version = "0.10", default-features = false }
cbc              = { version = "0.1",  default-features = false }

# ── Asymmetric / ECC ─────────────────────────────────────────────────────────
p256           = { version = "0.13",   default-features = false, features = ["ecdsa", "ecdh"] }
p384           = { version = "0.13",   default-features = false, features = ["ecdsa", "ecdh"] }
p521           = { version = "0.13",   default-features = false, features = ["ecdsa", "ecdh"] }
k256           = { version = "0.13",   default-features = false, features = ["ecdsa", "ecdh"] }
ed25519-dalek  = { version = "2.1",    default-features = false, features = ["rand_core", "zeroize"] }
x25519-dalek   = { version = "2.0",    default-features = false, features = ["static_secrets", "zeroize"] }
elliptic-curve = { version = "0.13.8", default-features = false, features = ["arithmetic", "group"] }
# rsa needs alloc; only link it in crates that provide a global allocator
rsa            = { version = "0.9",    default-features = false }

# ── Low-level crypto ─────────────────────────────────────────────────────────
rand_core     = { version = "0.6",   default-features = false }
subtle        = { version = "2.6",   default-features = false }
zeroize       = { version = "1.8",   default-features = false, features = ["derive"] }
dbl           = { version = "0.3.2", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false, features = ["generic-array", "rand_core", "zeroize"] }

# ── PKI / encoding (strip "pem" — it pulls std::io) ──────────────────────────
der       = { version = "0.7",  default-features = false }
pkcs8     = { version = "0.10", default-features = false }
x509-cert = { version = "0.2",  default-features = false }

# ── Data structures / utilities ──────────────────────────────────────────────
heapless  = { version = "0.8",   default-features = false }
cbor-smol = { version = "0.5",   default-features = false }
bip32     = { version = "0.5",   default-features = false }
half      = { version = "2.7.1", default-features = false }
defmt     = { version = "0.3",   default-features = false }

# ── FIDO / OATH ──────────────────────────────────────────────────────────────
ctap-types = { version = "0.3", default-features = false }
cosey      = { version = "0.3", default-features = false }
totp-lite  = { version = "2.0", default-features = false }

# ── Embedded traits / storage ────────────────────────────────────────────────
embedded-hal           = { version = "1.0", default-features = false }
embedded-storage       = { version = "0.3", default-features = false }
embedded-storage-async = { version = "0.4", default-features = false }
sequential-storage     = { version = "4.0", default-features = false }
iso7816                = { version = "0.1", default-features = false }
smart-leds             = { version = "0.4", default-features = false }

# ── Embassy ──────────────────────────────────────────────────────────────────
embassy-executor   = { version = "0.7", default-features = false }
embassy-time       = { version = "0.4", default-features = false }
embassy-sync       = { version = "0.6", default-features = false }
embassy-futures    = { version = "0.1", default-features = false }
embassy-usb        = { version = "0.4", default-features = false }
embassy-usb-driver = { version = "0.1", default-features = false }

# ── Platform: RP2040/RP2350 ──────────────────────────────────────────────────
embassy-rp   = { version = "0.4", default-features = false }
rp2040-boot2 = { version = "0.3", default-features = false }
ws2812-pio   = { version = "0.8", default-features = false }
cortex-m     = { version = "0.7", default-features = false }
cortex-m-rt  = { version = "0.7", default-features = false }

# ── Platform: ESP32 ──────────────────────────────────────────────────────────
esp-hal = { version = "1.0.0-beta.0", default-features = false }

# ── Platform: SAMD21 ─────────────────────────────────────────────────────────
atsamd-hal = { version = "0.17", default-features = false }

# ── Panic / debug ────────────────────────────────────────────────────────────
defmt-rtt   = { version = "0.4", default-features = false }
panic-probe = { version = "0.3", default-features = false, features = ["print-defmt"] }
static-cell = { version = "2.1", default-features = false, package = "static_cell" }

# ── Profiles ─────────────────────────────────────────────────────────────────
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = false

[profile.release.package.num-bigint-dig]
opt-level = 3

[workspace.metadata.cargo-embed]
force-no-std = true