[package]
name = "pico-rs-fido"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FIDO2/CTAP2 + OATH application for PicoKeys v2"

[features]
default = []
rp2040 = ["pico-rs-sdk/rp2040", "dep:embassy-rp", "dep:rp2040-boot2", "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe", "dep:static-cell"]
rp2350 = ["pico-rs-sdk/rp2350", "dep:embassy-rp", "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe", "dep:static-cell"]
esp32s3 = ["pico-rs-sdk/esp32s3", "dep:esp-hal"]
esp32c5 = ["pico-rs-sdk/esp32c5", "dep:esp-hal"]
esp32c6 = ["pico-rs-sdk/esp32c6", "dep:esp-hal"]
samd21 = ["pico-rs-sdk/samd21", "dep:atsamd-hal", "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe"]

[dependencies]
pico-rs-sdk = { path = "../pico-rs-sdk" }

# CTAP2 types and protocol
ctap-types = "0.3"
cosey = "0.3"

# CBOR
cbor-smol = "0.5"

# OATH
totp-lite = "2.0"

# BIP39/32 backup
bip32 = { version = "0.5", default-features = false }

# Crypto (re-exported from SDK but some direct usage needed)
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "ecdh"] }
ed25519-dalek = { version = "2.1", default-features = false }
aes = { version = "0.8", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
rand_core = { version = "0.6", default-features = false }
heapless = "0.8"
defmt = "0.3"

# Embassy
embassy-executor = { version = "0.7", default-features = false }
embassy-time = { version = "0.4", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
embassy-usb = { version = "0.4", default-features = false }

# Platform: RP2040/RP2350 (binary entrypoints)
embassy-rp = { version = "0.4", default-features = false, optional = true }
rp2040-boot2 = { version = "0.3", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }

# Platform: ESP32
esp-hal = { version = "1.0.0-beta.0", optional = true }

# Platform: SAMD21
atsamd-hal = { version = "0.17", optional = true }

# Logging / panic (binary entrypoints)
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
static-cell = { version = "2.1", optional = true, package = "static_cell" }

# Binary entrypoint [[bin]] definitions
[[bin]]
name = "picokeys-fido-rp2040"
path = "src/bin/rp2040.rs"
required-features = ["rp2040"]

[[bin]]
name = "picokeys-fido-rp2350"
path = "src/bin/rp2350.rs"
required-features = ["rp2350"]

[[bin]]
name = "picokeys-fido-esp32s3"
path = "src/bin/esp32s3.rs"
required-features = ["esp32s3"]

[[bin]]
name = "picokeys-fido-esp32c5"
path = "src/bin/esp32c5.rs"
required-features = ["esp32c5"]

[[bin]]
name = "picokeys-fido-esp32c6"
path = "src/bin/esp32c6.rs"
required-features = ["esp32c6"]

[[bin]]
name = "picokeys-fido-samd21"
path = "src/bin/samd21.rs"
required-features = ["samd21"]
