[package]
name = "pico-rs-fido"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FIDO2/CTAP2 + OATH application for PicoKeys v2"

[features]
default = []
rp2040  = ["pico-rs-sdk/rp2040",  "dep:embassy-rp", "dep:rp2040-boot2", "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe", "dep:static-cell"]
rp2350  = ["pico-rs-sdk/rp2350",  "dep:embassy-rp",                     "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe", "dep:static-cell"]
esp32s3 = ["pico-rs-sdk/esp32s3", "dep:esp-hal"]
esp32c5 = ["pico-rs-sdk/esp32c5", "dep:esp-hal"]
esp32c6 = ["pico-rs-sdk/esp32c6", "dep:esp-hal"]
samd21  = ["pico-rs-sdk/samd21",  "dep:atsamd-hal", "dep:cortex-m", "dep:cortex-m-rt", "dep:defmt-rtt", "dep:panic-probe"]

[dependencies]
pico-rs-sdk = { path = "../pico-rs-sdk" }

# Transitive RustCrypto crates — explicit listing required for workspace
# default-features=false pins to suppress std across the whole dep graph.
crypto-common.workspace  = true
digest.workspace         = true
block-buffer.workspace   = true
cipher.workspace         = true
inout.workspace          = true
aead.workspace           = true
universal-hash.workspace = true
ghash.workspace          = true
polyval.workspace        = true
typenum.workspace        = true
generic-array.workspace  = true

# FIDO / OATH / BIP
ctap-types.workspace = true
cosey.workspace      = true
cbor-smol.workspace  = true
totp-lite.workspace  = true
bip32.workspace      = true

# Crypto (direct usage on top of SDK)
p256.workspace          = true
ed25519-dalek.workspace = true
aes.workspace           = true
aes-gcm.workspace       = true
hmac.workspace          = true
sha1.workspace          = true
sha2.workspace          = true
subtle.workspace        = true
zeroize.workspace       = true
rand_core.workspace     = true
dbl.workspace           = true
crypto-bigint.workspace = true
elliptic-curve.workspace = true

# thiserror v2 no_std
thiserror.workspace = true

# half: no std
half.workspace = true

# NOTE: darling_macro has been intentionally REMOVED.
# darling_macro is a proc-macro crate whose transitive dependencies
# (lalrpop, regex, indexmap, itertools, fnv, libc, semver, siphasher,
# phf_shared, either) all enable "std" features.  Because Cargo's
# feature resolver does not isolate proc-macro crate dependencies from
# the target's feature graph in all cases, these std features leak into
# the embedded build and cause link failures.
#
# If your source code uses #[derive(FromMeta)] from darling, keep the
# dependency but move it under a cfg-gated dev-dependency or ensure you
# are on resolver = "2" with the proc-macro isolation fix.  For firmware
# crates, darling derives are almost never needed at runtime.

heapless.workspace = true
defmt.workspace    = true

# Embassy
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embassy-futures.workspace  = true
embassy-usb.workspace      = true

# ── Platform: RP2040 / RP2350 ────────────────────────────────────────────────
embassy-rp   = { workspace = true, optional = true }
rp2040-boot2 = { workspace = true, optional = true }
cortex-m     = { workspace = true, optional = true }
cortex-m-rt  = { workspace = true, optional = true }

# ── Platform: ESP32 ──────────────────────────────────────────────────────────
esp-hal = { workspace = true, optional = true }

# ── Platform: SAMD21 ─────────────────────────────────────────────────────────
atsamd-hal = { workspace = true, optional = true }

# ── Logging / panic ──────────────────────────────────────────────────────────
defmt-rtt   = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
static-cell = { workspace = true, optional = true }

# ── Binary entry points ──────────────────────────────────────────────────────
[[bin]]
name = "picokeys-fido-rp2040"
path = "src/bin/rp2040.rs"
required-features = ["rp2040"]

[[bin]]
name = "picokeys-fido-rp2350"
path = "src/bin/rp2350.rs"
required-features = ["rp2350"]

[[bin]]
name = "picokeys-fido-esp32s3"
path = "src/bin/esp32s3.rs"
required-features = ["esp32s3"]

[[bin]]
name = "picokeys-fido-esp32c5"
path = "src/bin/esp32c5.rs"
required-features = ["esp32c5"]

[[bin]]
name = "picokeys-fido-esp32c6"
path = "src/bin/esp32c6.rs"
required-features = ["esp32c6"]

[[bin]]
name = "picokeys-fido-samd21"
path = "src/bin/samd21.rs"
required-features = ["samd21"]