[package]
name = "pico-rs-hsm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware Security Module (HSM) application for PicoKeys v2"

[features]
default = []
rp2040  = ["pico-rs-sdk/rp2040"]
rp2350  = ["pico-rs-sdk/rp2350"]
esp32s3 = ["pico-rs-sdk/esp32s3"]
esp32c5 = ["pico-rs-sdk/esp32c5"]
esp32c6 = ["pico-rs-sdk/esp32c6"]
# samd21 has no RSA/HSM support (too little flash); keep feature for SDK compat
samd21  = ["pico-rs-sdk/samd21"]

[dependencies]
# rsa needs alloc; activate the alloc feature on pico-rs-sdk so it pulls
# in rsa and a global allocator shim.
pico-rs-sdk = { path = "../pico-rs-sdk", features = ["alloc"] }

# Crypto
rsa.workspace              = true
p256.workspace             = true
p384.workspace             = true
p521.workspace             = true
k256.workspace             = true
ed25519-dalek.workspace    = true
x25519-dalek.workspace     = true
aes.workspace              = true
aes-gcm.workspace          = true
chacha20poly1305.workspace = true
cbc.workspace              = true
hmac.workspace             = true
hkdf.workspace             = true
pbkdf2.workspace           = true
sha2.workspace             = true
cmac.workspace             = true
zeroize.workspace          = true
subtle.workspace           = true
rand_core.workspace        = true
der.workspace              = true
pkcs8.workspace            = true
x509-cert.workspace        = true
bip32.workspace            = true
dbl.workspace              = true
crypto-bigint.workspace    = true
elliptic-curve.workspace   = true

# getrandom pinned with "custom"
getrandom.workspace = true

# thiserror v2 no_std
thiserror.workspace = true

# half: no std
half.workspace = true

# CBOR
cbor-smol.workspace = true

# Data structures
heapless.workspace = true
defmt.workspace    = true

# Embassy
embassy-executor.workspace = true
embassy-time.workspace     = true
embassy-sync.workspace     = true
embassy-usb.workspace      = true