[package]
name = "pico-rs-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core SDK for PicoKeys v2 — transport, crypto, storage, LED, button abstractions"

[features]
default = []
alloc  = ["dep:rsa", "zeroize/alloc"]
rp2040 = ["dep:embassy-rp", "embassy-rp/rp2040", "dep:rp2040-boot2", "dep:ws2812-pio", "dep:cortex-m", "dep:cortex-m-rt"]
rp2350 = ["dep:embassy-rp", "embassy-rp/_rp235x", "dep:cortex-m", "dep:cortex-m-rt"]
esp32s3 = ["dep:esp-hal"]
esp32c5 = ["dep:esp-hal"]
esp32c6 = ["dep:esp-hal"]
samd21  = ["dep:atsamd-hal", "dep:cortex-m", "dep:cortex-m-rt"]

[dependencies]
# Embassy
embassy-executor.workspace   = true
embassy-time.workspace       = true
embassy-sync.workspace       = true
embassy-futures.workspace    = true
embassy-usb.workspace        = true
embassy-usb-driver.workspace = true

# Storage
sequential-storage.workspace     = true
embedded-storage.workspace       = true
embedded-storage-async.workspace = true

# APDU
iso7816.workspace = true

# Transitive RustCrypto crates — must be listed explicitly for the workspace
# default-features=false pin to take effect. workspace.dependencies alone does
# NOT suppress std on transitive deps; explicit listing is required.
crypto-common.workspace  = true
digest.workspace         = true
block-buffer.workspace   = true
cipher.workspace         = true
inout.workspace          = true
aead.workspace           = true
universal-hash.workspace = true
ghash.workspace          = true
polyval.workspace        = true
typenum.workspace        = true
generic-array.workspace  = true

# Crypto
p256.workspace           = true
p384.workspace           = true
p521.workspace           = true
k256.workspace           = true
ed25519-dalek.workspace  = true
x25519-dalek.workspace   = true
rsa                      = { workspace = true, optional = true }
aes.workspace            = true
aes-gcm.workspace        = true
chacha20poly1305.workspace = true
cbc.workspace            = true
hmac.workspace           = true
hkdf.workspace           = true
pbkdf2.workspace         = true
sha2.workspace           = true
sha1.workspace           = true
cmac.workspace           = true
subtle.workspace         = true
zeroize.workspace        = true
rand_core.workspace      = true
der.workspace            = true
pkcs8.workspace          = true
dbl.workspace            = true
crypto-bigint.workspace  = true
elliptic-curve.workspace = true

# thiserror v2 (no_std-compatible)
thiserror.workspace = true

# Utilities
half.workspace = true

# Data structures
heapless.workspace = true

# Logging
defmt.workspace = true

# Embedded traits
embedded-hal.workspace = true

# LED
smart-leds.workspace = true

# ── Platform: RP2040 / RP2350 ────────────────────────────────────────────────
embassy-rp   = { workspace = true, optional = true }
rp2040-boot2 = { workspace = true, optional = true }
ws2812-pio   = { workspace = true, optional = true }
cortex-m     = { workspace = true, optional = true }
cortex-m-rt  = { workspace = true, optional = true }

# ── Platform: ESP32 ──────────────────────────────────────────────────────────
esp-hal = { workspace = true, optional = true }

# ── Platform: SAMD21 ─────────────────────────────────────────────────────────
atsamd-hal = { workspace = true, optional = true }